# bootcamp-IA-solutions

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
retrieval/: config.py  indexing_pipeline_utils.py  main.py  retrieval_pipeline_utils.py
retrieval/analysis/: embeddings.py
